--- a/_all-courses/ma321.md
+++ b/_all-courses/ma321.md
@@ -1,6 +1,19 @@
 ---
 title: Analysis III
-code: Ma 321
+code: MA 321
+books:
+  - author: Barros-Nato 
+    title: An Introduction to the Theory of Distributions
+    publ: Marcel Dekker Inc., New York, 1873
+  - author: Kesavan, S.
+    title: Topics in Functional Analysis and Applications
+    publ: Wiley Eastern Ltd., 1989
+  - author: Evans, L. C.
+    title: Partial Differential Equations
+    publ: Univ. of California, Berkeley, 1998
+  - author: Schwartz, L. Hermann
+    title: Theorie des Distributions
+    publ: 1966
 ---
  
 Theory of Distributions: Introduction, Topology of test functions,
@@ -11,14 +24,3 @@ Continuum and Compact imbeddings, Trace results.
 
 Elliptic boundary value problems: Variational formulation, Weak solutions,
 Maximum Principle, Regularity results.
- 
-Recommended Books
-
-* Barros-Nato: An Introduction to the Theory of Distributions, Marcel Dekker
-  Inc., New York, 1873.
-* Kesavan, S., Topics in Functional Analysis and Applications, Wiley Eastern
-  Ltd., 1989.
-* Evans, L. C., Partial Differential Equations, Univ. of California, Berkeley,
-  1998.
-* Schwartz, L., Theorie des Distributions, Hermann, 1966.
-   
