--- a/_all-courses/ma313.md
+++ b/_all-courses/ma313.md
@@ -22,8 +22,7 @@ books:
     publ: Hermann, 1970
 prereqs: 
   - Linear algebra (MA 219 or equivalent)
-  - 'Basic algebra : Groups, rings, modules (MA 212 or equivalent), and algebraic
-  field extensions'
+  - 'Basic algebra : Groups, rings, modules (MA 212 or equivalent), and algebraic field extensions'
 ---
 Algebraic preliminaries: Algebraic field extensions: Normal, separable and
 Galois extensions. Euclidean rings, principal ideal domains and factorial
