--- a/_all-courses/ma327.md
+++ b/_all-courses/ma327.md
@@ -1,6 +1,29 @@
 ---
 title: Topics in Analysis
-code: Ma 327
+code: MA 327
+books:
+  - author: Korner, I. T. W.
+    title: Fourier Analysis (1st Ed.)
+    publ: Cambridge Univ., Press, 1988
+  - author: Robert Ash. 
+    title: Information Theory
+    publ: Dover Special Priced, 2008
+  - author: Serre, J. P.
+    title: A course in Arithmetic
+    publ: Springer-Verlag, 1973
+  - author: Thangavelu, S.
+    title: An Introduction to the Uncertainity Principle
+    publ: Birkhauser, 2003
+  - author: Rudin W.
+    title: Real and Complex Analysis (3rd Edition)
+    publ: Tata McGraw Hill Education, 2007    
+prereqs:
+  - Real analysis 
+  - Complex analysis 
+  - Basic probability 
+  - Linear algebra
+  - Groups 
+  - It would help to know or to concurrently take a course in measure theory and /or functional analysis.
 ---
 In this course we begin by stating many wonderful theorems in analysis and
 proceed to prove them one by one. In contrast to usual courses (where we learn
@@ -13,21 +36,7 @@ instructive. And the techniques involve analysis.
 We intend to cover a subset of the following theoremes: Isoperimetric
 inequality, infinitude of primes in arithmetic progressions, Weyl's
 equidistribution theorem on the circle, Shannon's source coding theorem,
-undertainty, principles including Heisenberg's Wigner's law for eigenvalue of a
+uncertainty, principles including Heisenberg's Wigner's law for eigenvalue of a
 random matrix, Picard's theorem on the range of an entire function, principal
-component analysis to reduce dimensionality of data.....
-
-Prerequisites : Real analysis, complex analysis, basic probability, linear
-algebra, groups. It would help to know or to concurrently take a course in
-measure theory and /or functional analysis.
+component analysis to reduce dimensionality of data.
  
-Recommended books
-
-* Korner, I. T. W., Fourier Analysis, Cambridge Univ., Press, 1 ed., 1988.
-* Rudin W., Real and Complex Analysis, Tata McGraw Hill Education, 3rd ed.,
-  2007.
-* Thangavelu, S., An Introduction to the Uncertainity Principle, Birkhauser,
-  2003.
-* Serre, J. P., A course in Arithmetic, Springer-Verlag, 1973.
-* Robert Ash., Information Theory, Dover Special Priced, 2008.
-
