--- a/_all-courses/ma332.md
+++ b/_all-courses/ma332.md
@@ -4,12 +4,10 @@ code: MA 332
 books:
   - author: Hatcher, A.
     title: Algebraic Topology
-    publ: Cambridge Univ. Press, 2002 (Indian edition
-  is available)
+    publ: Cambridge Univ. Press, 2002 (Indian edition is available)
   - author: Rotman, J
     title: An Introduction to Algebraic Topology
-    publ: Graduate Texts in
-  Mathematics, 119, Springer-Verlag, 1988
+    publ: Graduate Texts in Mathematics, 119, Springer-Verlag, 1988
   - author: Munkres, I. R.
     title: Elements of Algebraic Topology
     publ: Addison-Wesiley, 1984
@@ -17,7 +15,7 @@ books:
     title: Basic Algebraic Topology
     publ: CRC Press, 2014
 ---
-Homology :Singular homology, excision, Mayer-Vietoris theorem, acyclic models,
+Homology : Singular homology, excision, Mayer-Vietoris theorem, acyclic models,
 CW-complexes, simplicial and cellular homology, homology with coefficients./p>
 Cohomology : Comology groups, relative cohomology,cup products, Kunneth
 formula, cap product, orientation on manifolds, Poincare duality.
