--- a/_all-courses/ma338.md
+++ b/_all-courses/ma338.md
@@ -1,16 +1,25 @@
 ---
-code: Ma 338
-title: Differential Manifolds and Lie Group
+code: MA 338
+title: Differentiable manifolds and Lie groups
+books:
+  - author: Spivak M.
+    title: A comprehensive introduction to differential geometry (Vol. 1) (3rd Ed.)    
+    publ: Publish or Perish, Inc., Houston, Texas, 2005
+  - author: Kumaresan S. 
+    title: A course in differential geometry and Lie groups
+    publ: Texts and Readings in Mathematics, 22. Hindustan Book Agency, New Delhi, 2002
+  - author: Warner F. 
+    title: Foundations of differentiable manifolds and Lie groups
+    publ: Graduate Texts in Mathematics, 94. Springer-Verlag, New York-Berlin, 1983
+  - author: Lee J. 
+    title: Introduction to smooth manifolds
+    publ: Graduate Texts in Mathematics, 218. *Springer, New York,* 2013
+prereqs:
+  - Point set topology. A first course in algebraic topology is helpful but not necessary.
+  - Real analysis in more than one variable.
+  - Linear algebra.
 ---
 
-Differentiable manifolds, differentiable maps, regular values and Sard's
-theorem, submersions and immersions, tangent and cotangent bundles as examples of vector bundles, vector fields and flows, exponential map, Frobenius theorem, Lie groups and Lie algebras, exponential map , tensors and
-differential forms, exterior algebra, Lie derivative, Orientable manifolds, integration on manifolds and
-Stokes Theorem . Covariant differentiation, Riemannian metrics, Levi-Civita connection, Curvature
-and parallel transport, spaces of constant curvature.
+Differentiable manifolds, differentiable maps, regular values and Sard's theorem, submersions and immersions, tangent and cotangent bundles as examples of vector bundles, vector fields and flows, exponential map, Frobenius theorem, Lie groups and Lie algebras, exponential map , tensors and differential forms, exterior algebra, Lie derivative, Orientable manifolds, integration on manifolds and
+Stokes Theorem . Covariant differentiation, Riemannian metrics, Levi-Civita connection, Curvature and parallel transport, spaces of constant curvature.
 
-References:
-* M. Spivak : A comprehensive introduction to differential geometry (Vol. 1) - 3rd Ed, *Publish or Perish, Inc., Houston, Texas* 2005
-* S. Kumaresan: A course in differential geometry and Lie groups, Texts and Readings in Mathematics, 22. *Hindustan Book Agency, New Delhi,* 2002
-* F. Warner: Foundations of differentiable manifolds and Lie groups , Graduate Texts in Mathematics, 94. *Springer-Verlag, New York-Berlin,* 1983
-* J. Lee: Introduction to smooth manifolds , Graduate Texts in Mathematics, 218. *Springer, New York,* 2013
