--- a/_all-courses/ma340.md
+++ b/_all-courses/ma340.md
@@ -1,13 +1,15 @@
 ---
 title: Advanced Functional Analysis
-code: Ma 340
+code: MA 340
+books:
+  - author: Conway, J.B. 
+    title: A Course in Functional Analysis
+    publ: Springer, 1985
+  - author: Douglas, R. G.  
+    title: Banach Algebra Techniques in Operator Theory
+    publ: Academic
+  Press, 1972
 ---
-Banach algebras, Gelfand theory, C* - algebras the GNS construction, spectral
+Banach algebras, Gelfand theory, $C^{*}$-algebras the GNS construction, spectral
 theorem for normal operators, Fredholm operators. The L-infinity functional
 calculus for normal operators.
-
-Recommended Books
-
-* Conway, J.B. : A Course in Functional Analysis, Springer, 1985.
-* Douglas, R. G. : Banach Algebra Techniques in Operator Theroy, Academic
-  Press, 1972.
