--- a/_all-courses/ma340.md
+++ b/_all-courses/ma340.md
@@ -7,8 +7,7 @@ books:
     publ: Springer, 1985
   - author: Douglas, R. G.  
     title: Banach Algebra Techniques in Operator Theory
-    publ: Academic
-  Press, 1972
+    publ: Academic Press, 1972
 ---
 Banach algebras, Gelfand theory, $C^{*}$-algebras the GNS construction, spectral
 theorem for normal operators, Fredholm operators. The L-infinity functional
