--- a/_all-courses/ma351.md
+++ b/_all-courses/ma351.md
@@ -1,6 +1,23 @@
 ---
 title: Modular Forms
-code: Ma 351
+code: MA 351
+prereqs:
+  - Basics of number theory
+  - Complex analysis
+  - Preferably some familiarity with MA 215 (Introduction to Modular Forms) but not necessary.
+books:
+  - author:  J.P. Serre. 
+    title: A Course in Arithmetic
+    publ: Springer GTM, 2007
+  - author:  N.Koblitz. 
+    title: Introduction to Elliptic Curves and Modular Forms
+    publ: Springer GTM, 1997
+  - author:  H. Iwaniec
+    title: Topics in Classical Automorphic Forms
+    publ: GTM 17, AMS,1997
+  - author: F. Diamond and J.Schurman
+    title: A First Course in Modular forms
+    publ: Springer GTM 228
 ---
 
 Holomorphic Modular forms: motivation and introduction, Eisentein series, cusp
@@ -12,15 +29,4 @@ Convolution: the Rankin-Selberg method.
 (Further topics if time permits: Non-holomorphic modular forms (overview),
 Siegel modular forms (introduction), Elliptic curves and cusp forms, spectral
 theory, analytic questions related to modular forms.)
-Prerequisites :
 
-Basics of number theory, complex analysis, preferably some familiarity with MA
-215 (Introduction to Modular Forms) but not necessary.
-Recommended Books
-
-* A Course in Arithmetic by J.P. Serre. Springer GTM 7.
-* Introduction to Elliptic Curves and Modular Forms by N.Koblitz. Springer GTM
-  97.
-* Topics in Classical Automorphic Forms by H. Iwaniec. GTM 17, AMS,1997.
-* A First Course in Modular forms, by F. Diamond and J.Schurman. Springer GTM
-  228.
