--- a/_all-courses/ma361.md
+++ b/_all-courses/ma361.md
@@ -1,6 +1,20 @@
 ---
 title: Probability Theory
-code: Ma 361
+code: MA 361
+books: 
+  - author: Durrett, R.
+    title: 'Probability: Theory' and Examples (4th Ed.)
+    publ: Cambridge University Press, 2010
+  - author: Billingsley, P. 
+    title: Probability and Measure (3rd Ed.)
+    publ: Wiley India, 2008
+  - author: Kallenberg, O. 
+    title: Foundations of Modern Probability (2nd Ed.)
+    publ: Springer-
+  Verlag, 2002
+  - author: Walsh, J.
+    title: Knowing the Odds: An Introduction to Probability
+    publ:  AMS, 2012
 ---
 
 Probability measures and randown variables, pi and  lambda systems,
@@ -8,11 +22,4 @@ expectation, the moment generating function, the characteristic function, laws
 of large numbers, limit theorems, conditional contribution and expectation,
 martingales, infinitely 
 divisible laws and stable laws.
-Recommended Books
 
-* Durrett, R., Probability: Theory and Examples, 4th edition, Cambridge
-  University Press, 2010.
-* Billingsley, P., Probability and Measure, 3rd Edition, Wiley India, 2008.
-* Kallenberg, O., Foundations of Modern Probability, 2nd edition, Springer-
-  Verlag, 2002.
-* Walsh, J., Knowing the Odds: An Introduction to Probability, AMS, 2012.
