--- a/_all-courses/ma361.md
+++ b/_all-courses/ma361.md
@@ -3,17 +3,16 @@ title: Probability Theory
 code: MA 361
 books: 
   - author: Durrett, R.
-    title: 'Probability: Theory' and Examples (4th Ed.)
+    title: 'Probability: Theory and Examples (4th Ed.)'
     publ: Cambridge University Press, 2010
   - author: Billingsley, P. 
     title: Probability and Measure (3rd Ed.)
     publ: Wiley India, 2008
   - author: Kallenberg, O. 
     title: Foundations of Modern Probability (2nd Ed.)
-    publ: Springer-
-  Verlag, 2002
+    publ: Springer-Verlag, 2002
   - author: Walsh, J.
-    title: Knowing the Odds: An Introduction to Probability
+    title: 'Knowing the Odds: An Introduction to Probability'
     publ:  AMS, 2012
 ---
 
