--- a/_all-courses/ma371.md
+++ b/_all-courses/ma371.md
@@ -1,9 +1,31 @@
 ---
 title: Control and Homogenization
-code: Ma 371
+code: MA 371
+prereqs:
+  - Sobolev spaces
+  - Elliptic boundary value problems
+  - Heat and wave equations
+  - Variational formulation and semigroup theory
+books:  
+  - author: B. Lee and L. Markus
+    title: Foundations of Optimal Control Theory
+    publ: John Wiley, 1968
+  - author: L. Lions
+    title: Optimal Control of Systems Governed by Partial Differential Equations
+    publ: Springer, 1991
+  - author: L. Lions
+    title: Controlabilite exact et Stabilisation des systemes distribues, Vol. 1
+    publ: 2 Masson, Paris, 1988
+  - author: Bardi, I. Capuzzo-Dolcetta  
+    title: Optimal Control and Viscosity Solutions of Hamilton-Jacobi-Bellman Equations
+    publ: Birkhauser, 1997
+  - author: Kesavan
+    title: Topics in Functional Analysis and Applications
+    publ: Wiley-Eastern, New Delhi, 1989
+  - author: Dal Maso 
+    title: An Introduction to $\Gamma$-Convergence
+    publ: Birkhauser, 1993
 ---
-Prerequisites:Sobolev spaces, Elliptic boundary value problems, Heat and wave
-equations, Variational formulation and semigroup theory.
 Optimal Control of PDE:Optimal control problems governed by elliptic equations
 and linear parabolic and hyperbolic equations with distributed and boundary
 controls, Computational methods.
@@ -13,19 +35,4 @@ Applications and Extensions:Control in coefficients of elliptic equations,
 Controllability and Stabilization of Infinite Dimensional Systems, Hamilton-
 Jacobi-Bellman equations and Riccati equations, Optimal control and
 stabilization of flow related models.
- 
-
-Books
-
-* B. Lee and L. Markus, Foundations of Optimal Control Theory, John Wiley,
-  1968.
-* L. Lions, Optimal Control of Systems Governed by Partial Differential
-  Equations, Springer, 1991.
-* L. Lions, Controlabilite exact et Stabilisation des systemes distribues, Vol.
-  1, 2 Masson, Paris 1988.
-* Bardi, I. Capuzzo-Dolcetta, Optimal Control and Viscosity Solutions of
-  Hamilton-Jacobi-Bellman Equations, Birkhauser, 1997.
-* Kesavan, Topics in Functional Analysis and Applications, Wiley-Eastern, New
-  Delhi, 1989.
-* Dal Maso, An Introduction to $\Gamma$-Convergence, Birkhauser, 1993.
 
