--- a/_all-courses/ma380.md
+++ b/_all-courses/ma380.md
@@ -1,6 +1,13 @@
 ---
 title: Introduction to Complex Dynamics
-code: Ma 380
+code: MA 380
+books:
+  - author: J. Milnor 
+    title: Dynamics in One Complex Variable
+    publ: Annals of Mathematics Studies no. 160, Princeton University Press, 2006
+  - author: A.F. Beardon
+    title: 'Iteration of Rational Functions: Complex Analytic Dynamical Systems'
+    publ: Graduate Texts in Mathematics no. 132, Springer-Verlag 1991
 ---
 The dynamics alluded to by the title of the course refers to dynamical systems
 that arise from iterating a holomorphic self-map of a complex manifold. In this
@@ -15,9 +22,4 @@ local theory of fixed points will be presented. In the case of rational maps,
 some ergodic-theoretic properties of the orbits under iteration will be
 studied. The development of the latter will be self-contained. The properties/
 theory coverd will depend on the time available and on the audience's interest.
-Recommended Books
 
-* J. Milnor, Dynamics in One Complex Variable, Annals of Mathematics Studies no
-  . 160, Princeton University Press, 2006.
-* A.F. Beardon, Iteration of Rational Functions: Complex Analytic Dynamical
-  Systems, Graduate Texts in Mathematics no. 132, Springer-Verlag 1991.
