--- a/_all-courses/ma383.md
+++ b/_all-courses/ma383.md
@@ -1,7 +1,22 @@
 ---
 title: Introduction to Minimal Surfaces
-code: Ma 383
----
+code: MA 383
+books:
+  - author: Dierkes, Hildebrandt, Kuster, Wohlrab 
+    title: Minimal Surfaces I
+    publ: 
+  - author: Manfredo Do Carmo
+    title: Differential Geometry of curves and surfaces
+    publ: 
+  - author: Robert Osserman
+    title: A survey of minimal surfaces
+    publ: 
+  - author: Yi Fang
+    title: Lectures on Minimal Surfaces in $R^n$
+    publ: 
+  - author: K. Kenmotsu
+    title: Surfaces of constant mean curvature
+    publ:
 Serre-Frenet formula for curves, Parametric surfaces, Isothermal parameters,
 Gauss Map, Gaussian Curvature, Mean curvature, Area functional etc.
 
@@ -28,11 +43,3 @@ Connection betwen minimal and maximal surfaces and Born Infeld solitions.
 Constant mean curvature surfaces of non-zero mean curvature (the optimization
 problem they solve)
  
-Recommended books
-
-* Manfredo Do Carmo: Differential Geometry of curves and surfaces.
-* Robert Osserman: A survey of minimal surfaces.
-* Dierkes, Hildebrandt, Kuster, Wohlrab: Minimal Surfaces I.
-* Yi Fang: Lectures on Minimal Surfaces in Rn
-* K. Kenmotsu: Surfaces of constent mean curvature.
-
