--- a/_all-courses/ma383.md
+++ b/_all-courses/ma383.md
@@ -4,19 +4,19 @@ code: MA 383
 books:
   - author: Dierkes, Hildebrandt, Kuster, Wohlrab 
     title: Minimal Surfaces I
-    publ: 
+    publ: -
   - author: Manfredo Do Carmo
     title: Differential Geometry of curves and surfaces
-    publ: 
+    publ: -
   - author: Robert Osserman
     title: A survey of minimal surfaces
-    publ: 
+    publ: -
   - author: Yi Fang
     title: Lectures on Minimal Surfaces in $R^n$
-    publ: 
+    publ: -
   - author: K. Kenmotsu
     title: Surfaces of constant mean curvature
-    publ:
+    publ: -
 Serre-Frenet formula for curves, Parametric surfaces, Isothermal parameters,
 Gauss Map, Gaussian Curvature, Mean curvature, Area functional etc.
 
