--- a/_all-courses/ma390.md
+++ b/_all-courses/ma390.md
@@ -1,14 +1,20 @@
 ---
 title: Percolation and Random Graphs
-code: Ma 390
+code: MA 390
+books:
+  - author: Geoffrey Grimmett  
+    title: Probability on Graphs
+    publ: Cambridge University Press
+  - author: Rick Durrett  
+    title: Random Graph Dynamics
+    publ: Cambridge University Press
+  - author: Bollobas 
+    title: Random Graphs
+    publ: Cambridge University Press
+  - author: Geoffrey Grimmett 
+    title: Percolation
+    publ: Springer
 ---
 Discrete parameter martingales, branching process, percolation on graphs,
 random graphs, random walks on graphs, interacting particle systems.
- 
-Recommended books
-
-* Geoffrey Grimmett: Probability on Graphs, Cambridge University Press.
-* Rick Durrett: Random Graph Dynamics, Cambridge University Press.
-* Geoffrey Grimmett: Percolation, Springer.
-* Bollobas: Random Graphs, Cambridge University Press.
 
