--- a/_all-courses/ma392.md
+++ b/_all-courses/ma392.md
@@ -1,12 +1,17 @@
 ---
-code: Ma 392
+code: MA 392
 title: Random Graphs and interacting particle systems
+books:
+ - author: Rick Durrett  
+    title: Random Graph Dynamics
+    publ: Cambridge University Press, 2001.
+  - author: Bollobas 
+    title: Random Graphs
+    publ: Cambridge University Press, 2006
+  - author: Janson, S., Luczak, T and Rucinski
+    title: Random Graphs
+    publ: Wiley, 2000
 ---
 Erdos - Renyi random graphs, graphs with power law degree distributions, Ising Potts and contact process,
 voter model, epidemic models.
 
-#### Books
-
-* Bollobas Bela, Random graphs, Cambridge University Press, Second Edition, 2006.
-* Janson, S., Luczak, T and Rucinski, A, Random Graphs, Wiley, 2000.
-* Durret, R: Random Graph Dynamics, Cambridge, 2011.
