--- a/_all-courses/ma221.md
+++ b/_all-courses/ma221.md
@@ -18,6 +18,6 @@ Theorem. The Riemann-Stieltjes integral: definition and examples, the
 Fundamental Theorem of Calculus. Sequences and series of functions, uniform
 convergence, the Weierstrass Approximation Theorem. Differentiability in higher
 dimensions: motivations, the total derivative, and basic theorems. Partial
-derivatives, characterization of continuously-differentiable functions. Higher-
-order derivatives.
+derivatives, characterization of continuously-differentiable functions. The
+Inverse and Implicit Function Theorems. Higher-order derivatives.
  
