--- a/_all-courses/ma221.md
+++ b/_all-courses/ma221.md
@@ -2,7 +2,7 @@
 title: Analysis I - Real Analysis
 code: MA 221
 books:
-  - author: Rudin
+  - author: Rudin, W.
     title: Principles of Mathematical Analysis
     publ: McGraw-Hill, 1986
   - author: Apostol, T. M. 
