--- a/_all-courses/ma278.md
+++ b/_all-courses/ma278.md
@@ -10,7 +10,7 @@ books:
     publ: Springer-Verlag, 2003
   - author: K. Alligood, T. Sauer, & James A.Yorke
     title: 'Chaos: An Introduction to Dynamical Systems'
-    publ: Springer-Verlag, 1996.
+    publ: Springer-Verlag, 1996
   - author: M.Tabor 
     title: Chaos and Integrability in Non-linear Dynamics
     publ: 1989
