--- a/_all-courses/ma380.md
+++ b/_all-courses/ma380.md
@@ -7,7 +7,7 @@ books:
     publ: Annals of Mathematics Studies no. 160, Princeton University Press, 2006
   - author: A.F. Beardon
     title: 'Iteration of Rational Functions: Complex Analytic Dynamical Systems'
-    publ: Graduate Texts in Mathematics no. 132, Springer-Verlag 1991
+    publ: Graduate Texts in Mathematics no. 132, Springer-Verlag, 1991
 ---
 The dynamics alluded to by the title of the course refers to dynamical systems
 that arise from iterating a holomorphic self-map of a complex manifold. In this
