--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,313 @@
+@article {MR3667896,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Noetherian schemes over abelian symmetric monoidal categories},
+   JOURNAL = {Internat. J. Math.},
+  FJOURNAL = {International Journal of Mathematics},
+    VOLUME = {28},
+      YEAR = {2017},
+    NUMBER = {7},
+     PAGES = {1750051, 34},
+      ISSN = {0129-167X},
+   MRCLASS = {14A15 (18D10 19D23)},
+  MRNUMBER = {3667896},
+       DOI = {10.1142/S0129167X17500513},
+       URL = {http://dx.doi.org/10.1142/S0129167X17500513},
+}
+
+@article {MR3646949,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {On some spectral spaces associated to tensor triangulated
+              categories},
+   JOURNAL = {Arch. Math. (Basel)},
+  FJOURNAL = {Archiv der Mathematik},
+    VOLUME = {108},
+      YEAR = {2017},
+    NUMBER = {6},
+     PAGES = {581--591},
+      ISSN = {0003-889X},
+   MRCLASS = {18E30 (06E15 13C60)},
+  MRNUMBER = {3646949},
+       DOI = {10.1007/s00013-017-1025-4},
+       URL = {http://dx.doi.org/10.1007/s00013-017-1025-4},
+}
+
+@article {MR3626589,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Monoidal semifilters and arrays of prime ideals},
+   JOURNAL = {Fund. Math.},
+  FJOURNAL = {Fundamenta Mathematicae},
+    VOLUME = {237},
+      YEAR = {2017},
+    NUMBER = {3},
+     PAGES = {281--296},
+      ISSN = {0016-2736},
+   MRCLASS = {13A15},
+  MRNUMBER = {3626589},
+       DOI = {10.4064/fm218-8-2016},
+       URL = {http://dx.doi.org/10.4064/fm218-8-2016},
+}
+
+@article {MR3536151,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Realizations of pairs and {O}ka families in tensor
+              triangulated categories},
+   JOURNAL = {Eur. J. Math.},
+  FJOURNAL = {European Journal of Mathematics},
+    VOLUME = {2},
+      YEAR = {2016},
+    NUMBER = {3},
+     PAGES = {760--797},
+      ISSN = {2199-675X},
+   MRCLASS = {13D09 (13A15 18E30)},
+  MRNUMBER = {3536151},
+MRREVIEWER = {Dejun Wu},
+       DOI = {10.1007/s40879-016-0108-2},
+       URL = {http://dx.doi.org/10.1007/s40879-016-0108-2},
+}
+
+@article {MR3508561,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Some remarks on a theorem of {B}ergman},
+   JOURNAL = {C. R. Math. Acad. Sci. Paris},
+  FJOURNAL = {Comptes Rendus Math\'ematique. Acad\'emie des Sciences. Paris},
+    VOLUME = {354},
+      YEAR = {2016},
+    NUMBER = {7},
+     PAGES = {665--670},
+      ISSN = {1631-073X},
+   MRCLASS = {18E15 (03E10 18G05)},
+  MRNUMBER = {3508561},
+MRREVIEWER = {George Ciprian Modoi},
+       DOI = {10.1016/j.crma.2016.05.005},
+       URL = {http://dx.doi.org/10.1016/j.crma.2016.05.005},
+}
+
+@article {MR3486289,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Schemes over symmetric monoidal categories and torsion
+              theories},
+   JOURNAL = {J. Pure Appl. Algebra},
+  FJOURNAL = {Journal of Pure and Applied Algebra},
+    VOLUME = {220},
+      YEAR = {2016},
+    NUMBER = {9},
+     PAGES = {3017--3047},
+      ISSN = {0022-4049},
+   MRCLASS = {18E40 (14F05 18D10 19D23)},
+  MRNUMBER = {3486289},
+MRREVIEWER = {Shawn Xingshan Cui},
+       DOI = {10.1016/j.jpaa.2016.02.001},
+       URL = {http://dx.doi.org/10.1016/j.jpaa.2016.02.001},
+}
+
+@article {MR3475099,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Homologie de {H}ochschild et espaces alg\'ebriques},
+   JOURNAL = {Math. Scand.},
+  FJOURNAL = {Mathematica Scandinavica},
+    VOLUME = {118},
+      YEAR = {2016},
+    NUMBER = {1},
+     PAGES = {33--42},
+      ISSN = {0025-5521},
+   MRCLASS = {14F43 (14A20 19D55)},
+  MRNUMBER = {3475099},
+MRREVIEWER = {Andr\'ea Solotar},
+       DOI = {10.7146/math.scand.a-23294},
+       URL = {http://dx.doi.org/10.7146/math.scand.a-23294},
+}
+
+@article {MR3471985,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Une note sur les d\'erivations localement nilpotentes dans les
+              cat\'egories mono\"\i dales sym\'etriques},
+   JOURNAL = {Bull. Belg. Math. Soc. Simon Stevin},
+  FJOURNAL = {Bulletin of the Belgian Mathematical Society. Simon Stevin},
+    VOLUME = {23},
+      YEAR = {2016},
+    NUMBER = {1},
+     PAGES = {151--160},
+      ISSN = {1370-1444},
+   MRCLASS = {18D10 (13N15)},
+  MRNUMBER = {3471985},
+MRREVIEWER = {Jos\'e N. Alonso \'Alvarez},
+       URL = {http://projecteuclid.org/euclid.bbms/1457560860},
+}
+
+@article {MR3448332,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Action de {H}opf sur les op\'erateurs de {H}ecke modulaires
+              tordus},
+   JOURNAL = {J. Noncommut. Geom.},
+  FJOURNAL = {Journal of Noncommutative Geometry},
+    VOLUME = {9},
+      YEAR = {2015},
+    NUMBER = {4},
+     PAGES = {1155--1173},
+      ISSN = {1661-6952},
+   MRCLASS = {11F03 (16T05)},
+  MRNUMBER = {3448332},
+MRREVIEWER = {Benjamin Linowitz},
+       DOI = {10.4171/JNCG/219},
+       URL = {http://dx.doi.org/10.4171/JNCG/219},
+}
+
+@article {MR3395710,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Nearby cycles and the {D}old-{K}an correspondence},
+   JOURNAL = {Comm. Algebra},
+  FJOURNAL = {Communications in Algebra},
+    VOLUME = {43},
+      YEAR = {2015},
+    NUMBER = {12},
+     PAGES = {5362--5371},
+      ISSN = {0092-7872},
+   MRCLASS = {14F05 (55N30)},
+  MRNUMBER = {3395710},
+MRREVIEWER = {Boris Goldfarb},
+       DOI = {10.1080/00927872.2014.975342},
+       URL = {http://dx.doi.org/10.1080/00927872.2014.975342},
+}
+
+@article {MR3283713,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Sch\'emas sur les cat\'egories ab\'eliennes mono\"\i dales sym\'etriques
+              et faisceaux quasi-coh\'erents},
+   JOURNAL = {J. Algebra},
+  FJOURNAL = {Journal of Algebra},
+    VOLUME = {423},
+      YEAR = {2015},
+     PAGES = {148--176},
+      ISSN = {0021-8693},
+   MRCLASS = {14F05 (18D10 18E30)},
+  MRNUMBER = {3283713},
+MRREVIEWER = {Jon Eivind Vatne},
+       DOI = {10.1016/j.jalgebra.2014.10.012},
+       URL = {http://dx.doi.org/10.1016/j.jalgebra.2014.10.012},
+}
+
+@article {MR3248219,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Les motifs de {T}ate et les op\'erateurs de p\'eriodicit\'e de
+              {C}onnes},
+   JOURNAL = {Ann. Math. Blaise Pascal},
+  FJOURNAL = {Annales Math\'ematiques Blaise Pascal},
+    VOLUME = {21},
+      YEAR = {2014},
+    NUMBER = {1},
+     PAGES = {1--23},
+      ISSN = {1259-1734},
+   MRCLASS = {58B34 (14F42 18D10 19D55 46L80)},
+  MRNUMBER = {3248219},
+MRREVIEWER = {Annette Huber},
+       URL = {http://ambp.cedram.org/item?id=AMBP_2014__21_1_1_0},
+}
+
+@article {MR3217754,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {On the {L}ie transformation algebra of monoids in symmetric
+              monoidal categories},
+   JOURNAL = {Rend. Semin. Mat. Univ. Padova},
+  FJOURNAL = {Rendiconti del Seminario Matematico della Universit\`a di
+              Padova},
+    VOLUME = {131},
+      YEAR = {2014},
+     PAGES = {151--157},
+      ISSN = {0041-8994},
+   MRCLASS = {18D10 (17A36)},
+  MRNUMBER = {3217754},
+MRREVIEWER = {Julien Bichon},
+       DOI = {10.4171/RSMUP/131-8},
+       URL = {http://dx.doi.org/10.4171/RSMUP/131-8},
+}
+
+@article {MR3210395,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Localization of monoid objects and {H}ochschild homology},
+   JOURNAL = {Comm. Algebra},
+  FJOURNAL = {Communications in Algebra},
+    VOLUME = {42},
+      YEAR = {2014},
+    NUMBER = {10},
+     PAGES = {4548--4558},
+      ISSN = {0092-7872},
+   MRCLASS = {18D10 (16E40)},
+  MRNUMBER = {3210395},
+MRREVIEWER = {Vanessa Miemietz},
+       DOI = {10.1080/00927872.2013.819434},
+       URL = {http://dx.doi.org/10.1080/00927872.2013.819434},
+}
+
+@article {MR3194242,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {Extensions de la filtration de {S}aito},
+   JOURNAL = {C. R. Math. Acad. Sci. Paris},
+  FJOURNAL = {Comptes Rendus Math\'ematique. Acad\'emie des Sciences. Paris},
+    VOLUME = {352},
+      YEAR = {2014},
+    NUMBER = {5},
+     PAGES = {377--382},
+      ISSN = {1631-073X},
+   MRCLASS = {14C15 (14C17)},
+  MRNUMBER = {3194242},
+MRREVIEWER = {Shahram Biglari},
+       DOI = {10.1016/j.crma.2014.03.016},
+       URL = {http://dx.doi.org/10.1016/j.crma.2014.03.016},
+}
+
+
+
+
+@inproceedings {MR3525959,
+    AUTHOR = {Ayyer, Arvind and Bouttier, J\'er\'emie and Corteel, Sylvie and
+              Nunzi, Fran\c{c}ois},
+     TITLE = {Multivariate juggling probabilities},
+ BOOKTITLE = {Proceedings of the 25th {I}nternational {C}onference on
+              {P}robabilistic, {C}ombinatorial and {A}symptotic {M}ethods
+              for the {A}nalysis of {A}lgorithms},
+    SERIES = {Discrete Math. Theor. Comput. Sci. Proc., BA},
+     PAGES = {1--12},
+ PUBLISHER = {Assoc. Discrete Math. Theor. Comput. Sci., Nancy},
+      YEAR = {2014},
+   MRCLASS = {60J10 (05A17)},
+  MRNUMBER = {3525959},
+}
+
+@article {MR3311218,
+    AUTHOR = {Ayyer, Arvind and Bouttier, J\'er\'emie and Corteel, Sylvie and
+              Nunzi, Fran\c{c}ois},
+     TITLE = {Multivariate juggling probabilities},
+   JOURNAL = {Electron. J. Probab.},
+  FJOURNAL = {Electronic Journal of Probability},
+    VOLUME = {20},
+      YEAR = {2015},
+     PAGES = {no. 5, 29},
+      ISSN = {1083-6489},
+   MRCLASS = {60J10 (05A17 60C05 82C23)},
+  MRNUMBER = {3311218},
+MRREVIEWER = {Elvira Di Nardo},
+       DOI = {10.1214/EJP.v20-3495},
+       URL = {http://dx.doi.org/10.1214/EJP.v20-3495},
+}
+
+@article {MR3320305,
+    AUTHOR = {Ayyer, Arvind and Schilling, Anne and Steinberg, Benjamin and
+              Thi\'ery, Nicolas M.},
+     TITLE = {Directed nonabelian sandpile models on trees},
+   JOURNAL = {Comm. Math. Phys.},
+  FJOURNAL = {Communications in Mathematical Physics},
+    VOLUME = {335},
+      YEAR = {2015},
+    NUMBER = {3},
+     PAGES = {1065--1098},
+      ISSN = {0010-3616},
+   MRCLASS = {60K35 (06A06 20M30 60J10)},
+  MRNUMBER = {3320305},
+MRREVIEWER = {Jan M. Swart},
+       DOI = {10.1007/s00220-015-2343-7},
+       URL = {http://dx.doi.org/10.1007/s00220-015-2343-7},
+}
+
 @article {MR3657159,
     AUTHOR = {Das, Soumya and Pal, Ritwik},
      TITLE = {Jacobi forms and differential operators: odd weights},
