Algebra I code corrected

--- a/_all-courses/ma212.md
+++ b/_all-courses/ma212.md
@@ -1,24 +1,38 @@
 ---
 title: Algebra I
-code: MA 212
+code: MA 210
 books:
-- author: Fraleigh, P.A. 
-  title: First course in Abstract Algebra
-  publ: Addison-Wesley / Narosa, 1992
-- author: Herstein, I. N.  
-  title: Topics in Algebra
-  publ: Vikas Publications, 1972
-- author: Artin, M.  
-  title: Algebra
-  publ: Prentice_Hall of India, 1994 
-- author: Jacobson, N.   
-  title: Basic Algebra  I, II
-  publ: Hindustan Pub. Co., 1993  
+  - author: Artin    
+    title: Algebra
+    publ: M. Prentice-Hall of India, 1994
+  - author: Dummit, D. S. and Foote, R. M.
+    title: Abstract Algebra
+    publ: McGraw-Hill, 1986      
+  - author: Herstein, I. N.
+    title: Topics in Algebra
+    publ: John Wiley & Sons, 1995
+  - author: Lang, S.
+    title: Algebra (3rd Ed.)
+    publ: Springer, 2002
 ---
+Part A
 
-Groups: Groups, Subgroups, Normal subgroups, Quotient groups, Group homomorphisms, Isomorphisms, Isomorphism theorems, Direct products, Finitely generated abelian groups, Group actions, Permutation groups, Sylow's theorems, Free abelian groups.
+* Groups: definitions & basic examples;
+* Normal subgroups, quotients;
+* Three isomorphism theorems;
+* Centralizer and normalizer of a subset, centre of a group;
+* Permutations, symmetrc groups and Cayley's theorem;
+* Group actions and their applications, Sylow's theorems.
 
-Rings: Rings, Subrings, Ideals, Quotient rings, Ring homomorphisms, Integral domains, Fields, Finite fields, Polynomial rings, Simple applications to Number theory.
+Part B
 
-Modules: Modules, Submodules, Free modules, Rank of a module, Module homomorphisms.
+* Rings and ideals: basic definitions, quotient rings;
+* The Chinese Remainder Theorem;
+* Maximal and prime ideals;
+* Unique factorization, unique factorization domains, principal ideal domains,
+  Euclidean domains, polynomial rings;
+* Modules: basic definitions and examples, Hom and tensor products, the
+  Structure Theorem for finitely generated modules over PIDs;
+* Fields: basic definitions and examples, algebraic & trancendental numbers;
+* Finite fields, characteristic, the order of a finite field.
 
