--- a/_all-courses/ma383.md
+++ b/_all-courses/ma383.md
@@ -2,45 +2,45 @@
 title: Introduction to Minimal Surfaces
 code: MA 383
 books:
-  - author: Dierkes, Hildebrandt, Kuster, Wohlrab 
+  - author: Dierkes, Hildebrandt, Kuster, Wohlrab
     title: Minimal Surfaces I
-    publ: 
+    publ:
   - author: Manfredo Do Carmo
     title: Differential Geometry of curves and surfaces
-    publ: 
+    publ:
   - author: Robert Osserman
     title: A survey of minimal surfaces
-    publ: 
+    publ:
   - author: Yi Fang
     title: Lectures on Minimal Surfaces in $R^n$
-    publ: 
+    publ:
   - author: K. Kenmotsu
     title: Surfaces of constant mean curvature
-    publ: 
+    publ:
 ---
-Serre-Frenet formula for curves, Parametric surfaces, Isothermal parameters,
-Gauss Map, Gaussian Curvature, Mean curvature, Area functional etc.
+* Serre-Frenet formula for curves, Parametric surfaces, Isothermal parameters,
+* Gauss Map, Gaussian Curvature, Mean curvature, Area functional etc.
 
-Surfaces that locally minimise area in Euclidean space (minimal surfaces).
-Harmonic coordinates in isothermal parameters. Examples of minimal surfaces.
+* Surfaces that locally minimise area in Euclidean space (minimal surfaces).
+* Harmonic coordinates in isothermal parameters. Examples of minimal surfaces.
 
-Minimal surfaces with boundary: Plateau's problem.
+* Minimal surfaces with boundary: Plateau's problem.
 
-The gauss map for minimal surfaces with some examples.
+* The gauss map for minimal surfaces with some examples.
 
-The Weierstrass-Enneper representation of minimal surfaces. Many more examples
+* The Weierstrass-Enneper representation of minimal surfaces. Many more examples
 of minimal surfaces.
 
-Conjugate minimal surfaces. One parameter family of isometric minimal surfaces.
+* Conjugate minimal surfaces. One parameter family of isometric minimal surfaces.
 the Bjorling problem and Schwartz's solution to it.
 
 If time permits:
 
-Surfaces that locally maximise area in Lorenztian space (maximal surfaces). A
+* Surfaces that locally maximise area in Lorenztian space (maximal surfaces). A
 lot of examples and analogous results, as in minimal surface theory, for
 maximal surfaces.
 
-Connection betwen minimal and maximal surfaces and Born Infeld solitions.
-Constant mean curvature surfaces of non-zero mean curvature (the optimization
+* Connection betwen minimal and maximal surfaces and Born Infeld solitions.
+* Constant mean curvature surfaces of non-zero mean curvature (the optimization
 problem they solve)
  
