--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,52 @@
+@incollection {MR3308326,
+    AUTHOR = {Ayyer, Arvind and Klee, Steven and Schilling, Anne},
+     TITLE = {Markov chains for promotion operators},
+ BOOKTITLE = {Algebraic monoids, group embeddings, and algebraic
+              combinatorics},
+    SERIES = {Fields Inst. Commun.},
+    VOLUME = {71},
+     PAGES = {285--304},
+ PUBLISHER = {Springer, New York},
+      YEAR = {2014},
+   MRCLASS = {06A07 (47D03 60J05)},
+  MRNUMBER = {3308326},
+MRREVIEWER = {Hiro-Fumi Yamada},
+       DOI = {10.1007/978-1-4939-0938-4_13},
+       URL = {http://dx.doi.org/10.1007/978-1-4939-0938-4_13},
+}
+
+@article {MR3206520,
+    AUTHOR = {Ayyer, Arvind and Linusson, Svante},
+     TITLE = {An inhomogeneous multispecies {TASEP} on a ring},
+   JOURNAL = {Adv. in Appl. Math.},
+  FJOURNAL = {Advances in Applied Mathematics},
+    VOLUME = {57},
+      YEAR = {2014},
+     PAGES = {21--43},
+      ISSN = {0196-8858},
+   MRCLASS = {60K35 (05A05)},
+  MRNUMBER = {3206520},
+MRREVIEWER = {Halim Zeghdoudi},
+       DOI = {10.1016/j.aam.2014.02.001},
+       URL = {http://dx.doi.org/10.1016/j.aam.2014.02.001},
+}
+
+@article {MR3199029,
+    AUTHOR = {Ayyer, Arvind and Klee, Steven and Schilling, Anne},
+     TITLE = {Combinatorial {M}arkov chains on linear extensions},
+   JOURNAL = {J. Algebraic Combin.},
+  FJOURNAL = {Journal of Algebraic Combinatorics. An International Journal},
+    VOLUME = {39},
+      YEAR = {2014},
+    NUMBER = {4},
+     PAGES = {853--881},
+      ISSN = {0925-9899},
+   MRCLASS = {06A05},
+  MRNUMBER = {3199029},
+       DOI = {10.1007/s10801-013-0470-9},
+       URL = {http://dx.doi.org/10.1007/s10801-013-0470-9},
+}
+
 @article {MR3667896,
     AUTHOR = {Banerjee, Abhishek},
      TITLE = {Noetherian schemes over abelian symmetric monoidal categories},
