course title corrected

--- a/_all-courses/ma351.md
+++ b/_all-courses/ma351.md
@@ -1,15 +1,15 @@
 ---
-title: Modular Forms
+title: Topics in Modular Forms
 code: MA 351
 prereqs:
   - Basics of number theory
   - Complex analysis
   - Preferably some familiarity with MA 215 (Introduction to Modular Forms) but not necessary.
 books:
-  - author:  J.P. Serre. 
+  - author:  J.P. Serre.
     title: A Course in Arithmetic
     publ: Springer GTM, 2007
-  - author:  N.Koblitz. 
+  - author:  N.Koblitz.
     title: Introduction to Elliptic Curves and Modular Forms
     publ: Springer GTM, 1997
   - author:  H. Iwaniec
@@ -29,4 +29,3 @@ Convolution: the Rankin-Selberg method.
 (Further topics if time permits: Non-holomorphic modular forms (overview),
 Siegel modular forms (introduction), Elliptic curves and cusp forms, spectral
 theory, analytic questions related to modular forms.)
-
