catalogue complete, course credits

--- a/_all-courses/ma200.md
+++ b/_all-courses/ma200.md
@@ -1,6 +1,7 @@
 ---
 title: Multivariable Calculus
 code: MA 200
+credits: "3:1"
 books:
   - author: Rudin
     title: Principles of Mathematical Analysis
