--- a/_all-courses/ma213.md
+++ b/_all-courses/ma213.md
@@ -1,13 +1,14 @@
 ---
 title: Algebra II
 code: MA 213
+credits: "3:1"
 books:
   - author: Artin, M.  
     title: Algebra
-    publ: Prentice_Hall of India, 1994 
+    publ: Prentice_Hall of India, 1994
   - author: Dummit, D. S. and Foote, R. M.
     title: Abstract Algebra
-    publ: McGraw-Hill, 1986 
+    publ: McGraw-Hill, 1986
   - author: Lang, S.
     title: Algebra (3rd Ed.)
     publ: Springer, 2002
