--- a/_all-courses/ma214.md
+++ b/_all-courses/ma214.md
@@ -1,4 +1,18 @@
 ---
 code: MA 214
 title: Topics in Commutative Algebra
+books:
+  - author: T. Becker and V. Weispfenning
+    title: Grobner Bases–a Computational Approach to Commutative Algebra
+    publ: Springer 1993
+  - author: W.W. Adams and P. Loustaunau
+    title: An Introduction to Grobner Bases
+    publ: Graduate Studies in Mathematics, Vol. 3, American Mathematical Society, 1994
+  - author: B. Sturmfels
+    title: Grobner bases and convex polytopes
+    publ: American Mathematical Society 1996
 ---
+Abstract relations and Dickson’s Lemma; Hilbert Basis theorem, Buchberger Criterion for
+Grobner Bases and Elimination Theorem; Field Extensions and the Hilbert Nullstellensatz;
+Decomposition, Radical, and Zeroes of Ideals; Syzygies, Grobner Bases for Modules, Computation
+of Hom, Free Resolutions; Universal Grobner Bases and Toric Ideals.
