--- a/_all-courses/ma219.md
+++ b/_all-courses/ma219.md
@@ -1,13 +1,14 @@
 ---
 title: Linear Algebra
 code: MA 219
+credits: "3:1"
 books:
   - author: Artin, M.  
     title: Algebra
-    publ: Prentice_Hall of India, 1994 
+    publ: Prentice_Hall of India, 1994
   - author: Halmos, P.
     title: Finite dimensional vector spaces
-    publ: Springer-Verlag (UTM), 1987 
+    publ: Springer-Verlag (UTM), 1987
   - author: Hoffman, K. and Kunze, R.
     title: Linear Algebra (2nd Ed.)
     publ: Prentice-Hall of India, 1992
