--- a/_all-courses/ma222.md
+++ b/_all-courses/ma222.md
@@ -1,8 +1,9 @@
 ---
 title: Analysis II - Measure and Integration
 code: MA 222
+credits: "3:1"
 books:
-  - author: Royden, H. L. 
+  - author: Royden, H. L.
     title: Real Analysis
     publ: Macmillan, 1988
   - author: Folland, G.B.
