--- a/_all-courses/ma231.md
+++ b/_all-courses/ma231.md
@@ -1,6 +1,7 @@
 ---
 title: Topology
 code: MA 231
+credits: "3:1"
 books:
   - author: Armstrong, M. A., Basic Topology, Springer (India), 2004.
     title: Functional Anaysis (2nd Ed.)
