--- a/_all-courses/ma241.md
+++ b/_all-courses/ma241.md
@@ -1,14 +1,15 @@
 ---
 title: Ordinary Differential Equations
 code: MA 241
+credits: "3:1"
 books:
   - author: Hartman
     title: Ordinary Differential Equations
     publ: P. Birkhaeuser, 1982
-  - author: Coddington, E. A. and Levinson, N. 
+  - author: Coddington, E. A. and Levinson, N.
     title: Theory of Ordinary Differential Equations
     publ: Tata McGraw-Hill, 1972
-  - author: Perko, L. 
+  - author: Perko, L.
     title: Differential Equations and Dynamical Systems
     publ: Springer-Verlag, 1991
 ---
@@ -21,4 +22,3 @@ Linear system:The fundamental matrix, stability of equilibrium points, Phase-
 plane analysis, Sturm-Liouvile theory .
 Nonlinear system and their stability:Lyapunov's method, Non-linear Perturbation
 of linear systems, Periodic solutions and Poincare- Bendixson theorem.
-
