--- a/_all-courses/ma391.md
+++ b/_all-courses/ma391.md
@@ -1,4 +1,12 @@
 ---
 code: MA 391
 title: Spectral Algorithms
+books:
+  - author: Ravindran Kannan and Santosh Vempala
+    title: Spectral Algorithms
+    publ: Foundations and Trends in Theoretical Computer Science, 4:3-4, now Publishers
 ---
+
+Part I - Applications of Spectral Algotihms: Best-Fit Subspaces, Mixture models, Probabilistic Clustering,Recursive Clustering, Optimization via low-rank approximation.
+
+Part II - Algorithms: Matrix Approximation via Random Sampling, Adaptive Sampling Methods, Extensions of SVD to tensors.
