--- a/_all-courses/um203.md
+++ b/_all-courses/um203.md
@@ -1,6 +1,7 @@
 ---
 code: UM 203
 title: Elementary Algebra and Number Theory
+credits: "3:1"
 books:
   - author: Burton, D. M.
     title: Elementary Number Theory
