--- a/_all-courses/ma224.md
+++ b/_all-courses/ma224.md
@@ -1,6 +1,7 @@
 ---
 title: Complex Analysis
 code: MA 224
+credits: "3:1"
 books:
   - author: Ahlfors, L. V.
     title: Complex Analysis
@@ -15,4 +16,3 @@ singularities, residue theorem, the Argument Principle, real integrals via
 contour integration. Mobius transformations, conformal mappings. The Schwarz
 lemma, automorphisms of the dis. Normal families and Montel's theorem. The
 Riemann mapping theorem.
-
