--- a/_all-courses/um204.md
+++ b/_all-courses/um204.md
@@ -1,6 +1,7 @@
 ---
 title: Introduction to Basic Analysis
 code: UM 204
+credits: "3:1"
 books:
   - author: Tao, T. 2014.
     title: Analysis I, 3rd edition
